--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,13 +9,13 @@
 }
 
 * {
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
 body {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     font-size: 14px;
     color: #1c1819;
     line-height: 24px;
@@ -305,6 +305,7 @@ body {
     border-radius: 8px 0 0 8px;
     border: none;
     height: 44px;
+    width: 44px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -328,7 +329,8 @@ body {
 .header__search > input:hover,
 .header__search > input:active,
 .header__search > input:focus {
-    min-width: 500px;
+    /* 44px button width */
+    min-width: calc(100% - 44px);
 }
 
 .header__user-menu {
@@ -559,10 +561,12 @@ body {
 .product__card {
     cursor: pointer;
     border-radius: 8px;
+    margin-bottom: -44px;
     transition: box-shadow 300ms ease-out;
 }
 
 .product__card:hover {
+    z-index: 2;
     box-shadow: 0 2px 10px rgba(28, 24, 25, 0.1);
 }
 
