--- a/src/css/products.scss
+++ b/src/css/products.scss
@@ -35,6 +35,7 @@
     }
 
     &__card {
+        background-color: $white;
         cursor: pointer;
         border-radius: $md-border-radius;
         margin-bottom: -44px;
