--- a/src/css/card.scss
+++ b/src/css/card.scss
@@ -64,7 +64,7 @@
 
     &:hover {
         z-index: 2;
-        box-shadow: 0 2px 10px rgba(28, 24, 25, 0.1);
+        box-shadow: 0 2px 10px rgba($black, 0.3);
 
         & .card__action {
             visibility: visible;
