--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -12,6 +12,12 @@ $half-blue: #e9f2fb;
 $half-green: #eff8eb;
 $half-yellow: #fffae7;
 
+$balance-bg: #f0fafd;
+
+$cloth-blue: #00458a;
+$cloth-beige: #efe8d8;
+$cloth-gray: #d4d4da;
+
 $sm-border-radius: 4px;
 $md-border-radius: 8px;
 $lg-border-radius: 16px;
