--- a/vue-kolesa-upgrade/src/assets/css/variables.scss
+++ b/vue-kolesa-upgrade/src/assets/css/variables.scss
@@ -17,6 +17,9 @@ $balance-bg: #f0fafd;
 $cloth-blue: #00458a;
 $cloth-beige: #efe8d8;
 $cloth-gray: #d4d4da;
+$cloth-black: #111111;
+$cloth-azure: #2a81dd;
+$cloth-red: #ff0000;
 
 $sm-border-radius: 4px;
 $md-border-radius: 8px;
