--- a/vue-kolesa-upgrade/src/assets/css/card.scss
+++ b/vue-kolesa-upgrade/src/assets/css/card.scss
@@ -1,77 +1,81 @@
 .card {
-    &__header {
-        position: relative;
-        width: 100%;
-        height: 330px;
-        padding: $lg-padding;
+  &__header {
+    position: relative;
+    width: 100%;
+    height: 330px;
+    padding: $lg-padding;
+    overflow: hidden;
+  }
+
+  &__img {
+    width: 100%;
+    height: auto;
+  }
+
+  &__badge {
+    position: absolute;
+    left: 16px;
+    bottom: 16px;
+    padding: 0 $sm-padding;
+    border-radius: $sm-border-radius;
+    background-color: $green;
+    text-transform: uppercase;
+    color: $white;
+
+    @include font(13px, 20px);
+  }
+
+  &__body {
+    padding: $lg-padding;
+    flex: 1;
+
+    @include flex($justify-content: space-between, $flex-direction: column);
+  }
+
+  &__price {
+    color: $blue;
+    margin-bottom: $md-margin;
+
+    @include transition(color);
+    @include font(24px, 36px, 600);
+  }
+
+  &__name {
+    width: 290px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: $sm-margin;
+
+    @include font(16px, 24px, 600);
+  }
+
+  &__size {
+    color: $gray;
+    margin-bottom: $lg-margin;
+
+    @include font(14px, 24px);
+  }
+
+  &__action {
+    width: 100%;
+    background-color: $blue;
+    color: $white;
+    visibility: hidden;
+
+    @include font(16px, 24px);
+  }
+
+  &:hover {
+    z-index: 2;
+    box-shadow: 0 2px 10px rgba($black, 0.3);
+
+    & .card__action {
+      visibility: visible;
     }
 
-    &__img {
-        width: 100%;
-        height: auto;
+    & .card__price {
+      color: $red;
     }
-
-    &__badge {
-        position: absolute;
-        left: 16px;
-        bottom: 16px;
-        padding: 0 $sm-padding;
-        border-radius: $sm-border-radius;
-        background-color: $green;
-        text-transform: uppercase;
-        color: $white;
-
-        @include font(13px, 20px);
-    }
-
-    &__body {
-        padding: $lg-padding;
-    }
-
-    &__price {
-        color: $blue;
-        margin-bottom: $md-margin;
-
-        @include transition(color);
-        @include font(24px, 36px, 600);
-    }
-
-    &__name {
-        width: 290px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin-bottom: $sm-margin;
-
-        @include font(16px, 24px, 600);
-    }
-
-    &__size {
-        color: $gray;
-        margin-bottom: $lg-margin;
-
-        @include font(14px, 24px);
-    }
-
-    &__action {
-        width: 100%;
-        background-color: $blue;
-        color: $white;
-        visibility: hidden;
-
-        @include font(16px, 24px);
-    }
-
-    &:hover {
-        z-index: 2;
-        box-shadow: 0 2px 10px rgba($black, 0.3);
-
-        & .card__action {
-            visibility: visible;
-        }
-
-        & .card__price {
-            color: $red;
-        }
-    }
+  }
 }
