--- a/vue-kolesa-upgrade/src/assets/css/style.scss
+++ b/vue-kolesa-upgrade/src/assets/css/style.scss
@@ -14,3 +14,6 @@
 @import 'footer.scss';
 @import 'modal.scss';
 @import 'custom-radio.scss';
+@import 'breadcrumbs.scss';
+@import 'get-points';
+@import 'get-points-card.scss';
