--- a/vue-kolesa-upgrade/src/assets/css/variables.scss
+++ b/vue-kolesa-upgrade/src/assets/css/variables.scss
@@ -4,6 +4,7 @@ $gray: #888b94;
 $red: #f33;
 $white: #fff;
 $green: #64bd38;
+$yellow: #ffdd61;
 
 $darkest-white: #f2f2f3;
 $lighter-blue: #d6ecfb;
