--- a/vue-kolesa-upgrade/src/assets/css/global.scss
+++ b/vue-kolesa-upgrade/src/assets/css/global.scss
@@ -1,75 +1,80 @@
 * {
-    font-family: $open-sans;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  font-family: $open-sans;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    @include font(14px, 24px);
+  @include font(14px, 24px);
 
-    color: $black;
+  color: $black;
 }
 
 #app {
-    width: 100%;
-    height: 100vh;
-    background-color: $white;
+  width: 100%;
+  height: 100vh;
+  background-color: $white;
 }
 
 .container {
-    max-width: 1440px;
-    height: 100%;
-    margin: 0 auto;
-    padding: $lg-padding $xxl-padding;
-    position: relative;
+  max-width: 1440px;
+  height: 100%;
+  margin: 0 auto;
+  padding: $lg-padding $xxl-padding;
+  position: relative;
 }
 
 .btn {
-    padding: $md-padding $lg-padding;
-    border-radius: $md-border-radius;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+  padding: $md-padding $lg-padding;
+  border-radius: $md-border-radius;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 
-    @include font(16px, 24px);
+  @include font(16px, 24px);
 
-    &--small {
-        @include font(14px, 24px);
-    }
+  &--small {
+    @include font(14px, 24px);
+  }
 
-    &--large {
-        padding: $md-padding $xl-padding;
-        border-radius: $lg-border-radius;
+  &--large {
+    padding: $md-padding $xl-padding;
+    border-radius: $lg-border-radius;
 
-        @include font(20px, 32px, 600);
-    }
+    @include font(20px, 32px, 600);
+  }
 
-    &--half-green {
-        background-color: $half-green;
-    }
+  &--half-green {
+    background-color: $half-green;
+  }
 
-    &--half-yellow {
-        background-color: $half-yellow;
-    }
+  &--half-yellow {
+    background-color: $half-yellow;
+  }
 
-    &--half-blue {
-        background-color: $half-blue;
-    }
+  &--half-blue {
+    background-color: $half-blue;
+  }
 
-    &--primary {
-        color: $white;
-        background-color: $blue;
-    }
+  &--primary {
+    color: $white;
+    background-color: $blue;
+  }
+
+  &--yellow {
+    color: $black;
+    background-color: $yellow;
+  }
 }
 
 .overlay {
-    width: 100%;
-    height: 100vh;
-    background-color: $black;
-    opacity: 0.6;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: block;
+  width: 100%;
+  height: 100vh;
+  background-color: $black;
+  opacity: 0.6;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: block;
 }
